# cinema-data-backend

./: main.py  pyproject.toml  requirements.txt
api/: .dockerignore  Dockerfile  README.md  database.py  main.py  models.py  query_helpers.py  requirements.txt  test_models.py
sdk/: pyproject.toml  test_sdk.py
sdk/src/cinema_data_sdk/: __init__.py  film_client.py  film_config.py
sdk/src/cinema_data_sdk/schemas/: __init__.py  schemas.py
